# hostwatch

./: .gitignore  README.md  go.mod  main.go  main_test.go  pyproject.toml  run.py
.github/workflows/: build.yml
src/hostwatch/: __init__.py  collector.py  main.py  models.py  storage.py
src/hostwatch/static/: app.js  index.html  style.css
tests/: test_api.py  test_collector.py  test_storage.py
