[project]
name = "hostwatch"
version = "0.1.0"
description = "通过 SSH 监控多台 Linux 主机资源的轻量 Web 服务"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncssh>=2.20.0,<3",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.34.0,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1",
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.25.0,<1",
]

[project.scripts]
hostwatch = "hostwatch.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hostwatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
